# osidb-bindings

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  CHANGELOG.md  DEVELOP.md  Dockerfile.export  LICENSE  Makefile  README.md  TUTORIAL.md  bindings_config.yml  constants.py  dev-requirements.txt  devel-requirements.in  devel-requirements.txt  openapi_schema.yaml  openapi_schema.yml  osidb_bindings.py  osidb_bindings.spec  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  setup.py  tox.ini
.copr/: Makefile
osidb_bindings/bindings/: README.md  pyproject.toml
osidb_bindings/bindings/python_client/: __init__.py  client.py  types.py
osidb_bindings/bindings/python_client/models/: __init__.py  affect.py  affect_alerts.py  affect_bulk_post_put_response.py  affect_bulk_post_put_response_failed_item.py  affect_bulk_put.py  affect_bulk_put_meta_attr.py  affect_bulk_put_request.py  affect_bulk_put_response.py  affect_cvss.py  affect_cvss_alerts.py  affect_cvss_post.py  affect_cvss_post_alerts.py  affect_cvss_post_request.py  affect_cvss_put.py  affect_cvss_put_alerts.py  affect_cvss_put_request.py  affect_cvss_request.py  affect_cvssv2.py  affect_cvssv2_post_request.py  affect_cvssv2_put_request.py  affect_meta_attr.py  affect_post.py  affect_post_alerts.py  affect_post_meta_attr.py  affect_post_request.py  affect_report_data.py  affect_request.py  affect_resolution_enum.py  affect_type.py  affect_v1.py  affect_v1_report_data.py  affectedness_enum.py  alert.py  alert_type_enum.py  audit.py  audit_pgh_context.py  audit_pgh_diff.py  audit_request.py  (+595 more)
(+402 files in other folders)
