[tool.poetry]
name = "bindings"
version = "4.10.1"
description = "A client library for accessing OSIDB API"
authors = []
readme = "README.md"
packages = [
    {include = "python_client"},
]
include = ["CHANGELOG.md", "python_client/py.typed"]


[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.20.0,<0.28.0"
attrs = ">=21.3.0"
python-dateutil = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403", "UP006"]
